--- a/mod.yml
+++ b/mod.yml
@@ -1,5 +1,6 @@
 title: Shrek Mix
 originalAuthor: TomK1004
+game: kh2
 description: The mandatory Shrek over Beast mod
 assets:
  - name: obj/H_BB010.mdlx
